+ allowed_hosts (local); +no doble submit en templates tag_selection, registration y article_display + eliminación de todo lo relacionado a ner_pipeline_input: modulo en newsbaitapp, view, form, url, y dependencias: accelerate, torch, transformers, huggingface-hub y pysentimiento

--- a/webapp/newsbaitapp/templates/article_display.html
+++ b/webapp/newsbaitapp/templates/article_display.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         <p>¿Se corresponde el contenido del artículo con lo que esperabas por el título?</p>
         <input type="range" id="concordanceRange" name="concordance_score" min="1" max="4" step="1">
-        <button type="submit">Enviar</button>
+        <button type="submit" onclick="this.disabled=true;this.form.submit();">Enviar</button>
     </form>
 </div>
 
