filtrado de identificadores de seccion en renderizacion de  etiquetas, edición de system prompt y extracción de título

--- a/webapp/newsbaitapp/templates/tag_selection.html
+++ b/webapp/newsbaitapp/templates/tag_selection.html
@@ -10,7 +10,7 @@
         
         <div id="tag-cloud">
             {% for tag in tags %}
-                <button type="button" class="btn btn-outline-primary m-2 tag-btn" data-tag="{{ tag }}">{{ tag }}</button>
+                <button type="button" class="btn btn-outline-primary m-2 tag-btn" data-tag="{{ tag }}">{{ tag|cut:"////"|cut:"///"|cut:"//" }}</button>
             {% endfor %}
             <input type="hidden" id="selectedTags" name="selected_tags" value="">
         </div>
