actualización textos y urls

--- a/webapp/newsbaitapp/templates/base.html
+++ b/webapp/newsbaitapp/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsBait Experimento</title>
+    <title>NewsBait</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -25,7 +25,7 @@
     {% endblock %}
 </div>
 
-<footer class="text-center mt-5">© 2023 NewsBait. Todos los derechos reservados.</footer>
+<footer class="text-center mt-5"> Recuperación y Minería de Texto | Maestría Data Mining | Universidad de Buenos Aires | Grupo 1 </footer>
 
 
 <!-- Include Bootstrap JS and Popper.js -->
