--- a/webapp/newsbaitapp/templates/registration.html
+++ b/webapp/newsbaitapp/templates/registration.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>¡Bienvenido a NewsBait!</h1>
+        <h1>¡Bienvenido/a!</h1>
         <p>
             Gracias por participar en nuestro experimento.
             
@@ -24,7 +24,8 @@
             <button type="submit" class="btn btn-primary" onclick="this.disabled=true;this.form.submit();">Iniciar experimento</button>
         </form>
         <p>
-            <br>*Podés participar cuantas veces quieras, pero en ese caso, elegí distintas secciones.
+            <br>*Paciencia con las demoras en la carga, por favor.
+            <br>**Podés participar cuantas veces quieras, pero en ese caso, elegí distintas secciones.
         </p>
 
     </div>
