--- a/webapp/newsbaitapp/templates/thank_you.html
+++ b/webapp/newsbaitapp/templates/thank_you.html
@@ -4,7 +4,7 @@
 <div class="centered-container">
     <div class="form-container">
         <h2>¡Gracias por participar!<br><br></h2>
-        <p>Agradecemos tu tiempo y esfuerzo. Tu aporte será utilizado para el enriquecer el conocimiento universal de la conducta humana y cómo manipularla.</p>
+        <p>Agradecemos tu tiempo y esfuerzo.</p>
 
         <p>De manera opcional, podés dejarnos estos datos sobre vos y/o un comentario</p>
 
