cambios mínimos en textos

--- a/webapp/newsbaitapp/templates/registration.html
+++ b/webapp/newsbaitapp/templates/registration.html
@@ -8,7 +8,7 @@
             
             Te vamos a presentar varios títulos de noticias para que elijas el que más interés te genere.
             <br>Para eso, primero vas a indicarnos una sección temática y luego vas a poder elegir tópicos que consumas habitualmente.
-            <br>Luego vas a poder juzgar la correspondencia del título elegido con el contenido del artículo.
+            <br>Después vas a poder juzgar la correspondencia del título elegido con el contenido del artículo.
         </p>
         <p>
             Nuestro objetivo es analizar la capacidad de la IA de generar títulos coherentes, relevantes, atractivos y personalizados para los usuarios.
@@ -25,7 +25,7 @@
         </form>
         <p>
             <br>*Paciencia con las demoras en la carga, por favor.
-            <br>**Podés participar cuantas veces quieras, pero en ese caso, elegí distintas secciones.
+            <br>**Podés participar cuantas veces quieras. Pero, en ese caso, elegí distintas secciones.
         </p>
 
     </div>
