--- a/webapp/newsbaitapp/templates/base.html
+++ b/webapp/newsbaitapp/templates/base.html
@@ -25,7 +25,9 @@
     {% endblock %}
 </div>
 
-<footer class="text-center mt-5"> Recuperación y Minería de Texto | Maestría Data Mining | Universidad de Buenos Aires | Grupo 1 </footer>
+<footer class="text-center mt-5"> Recuperación y Minería de Texto | Maestría Data Mining | Universidad de Buenos Aires <br>
+    Guillermo Bernabó, Daniel Careno, L. Nahuel Fernández, Nicolás Rubinstein
+ </footer>
 
 
 <!-- Include Bootstrap JS and Popper.js -->
