--- a/webapp/newsbaitapp/templates/base.html
+++ b/webapp/newsbaitapp/templates/base.html
@@ -26,7 +26,7 @@
 </div>
 
 <footer class="text-center mt-5"> Recuperación y Minería de Texto | Maestría Data Mining | Universidad de Buenos Aires <br>
-    Guillermo Bernabó, Daniel Careno, L. Nahuel Fernández, Nicolás Rubinstein
+    Nicolás Rubinstein
  </footer>
 
 
